--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "immutable": "^4.1.0",
+    "lodash": "^4.17.21",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
