--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "^5.0.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
+    "draft-js": "^0.11.7",
+    "three": "^0.141.0",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
