--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@capacitor/cli": "4.3.0"
   },
   "description": "An Ionic project"
