--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "immutable": "^4.1.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
