--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
+    "@types/draft-js": "^0.11.9" ,
     "@capacitor/cli": "4.3.0"
   },
   "description": "An Ionic project"
