add those `@ffmpeg/*` stuffs

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "web-vitals": "^0.2.4",
     "draft-js": "^0.11.7",
     "three": "^0.141.0",
+    "@ffmpeg/core": "^0.11.0",
+    "@ffmpeg/core-st": "^0.11.1",
+    "@ffmpeg/ffmpeg": "^0.11.6",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
